<resources>
    <string name="app_name">Project0</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="score_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_app">CAPSTONE: MY OWN APP</string>
    <string name="capstone_button_clicked_text">This button will launch my capstone app!</string>
    <string name="xyz_button_click_text">This button will launch my xyz reader app!</string>
    <string name="build_bigger_button_click_text">This button will launch my build it bigger app!</string>
    <string name="library_button_click_text">This button will launch my library app!</string>
    <string name="score_button_click_text">This button will launch my score app!</string>
    <string name="spotify_streamer_button_click_text">This button will launch my spotify streamer app!</string>
</resources>
